--- a/rateTicket/staticwebapp.config.json
+++ b/rateTicket/staticwebapp.config.json
@@ -1,3 +1,7 @@
 {
-    
+    "globalHeaders": {
+        "content-security-policy": "default-src 'self'; script-src 'self' 'https://cdn.botframework.com/botframework-webchat/latest/webchat.js'; style-src 'self' 'unsafe-inline'; style-src-attr 'self'; img-src 'self'; connect-src https://maresachatbot.azurewebsites.net; manifest-src 'self'; frame-ancestors 'self' https://portalcmh.corpmaresa.com.ec",
+        "Strict-Transport-Security" : "max-age=31536000; includeSubDomains",
+        "X-Content-Type-Options": "nosniff"
+    }
 }
