--- a/rateTicket/staticwebapp.config.json
+++ b/rateTicket/staticwebapp.config.json
@@ -1,6 +1,6 @@
 {
     "globalHeaders": {
-        "content-security-policy": "default-src 'self'; script-src 'self' 'https://cdn.botframework.com/botframework-webchat/latest/webchat.js'; style-src 'self' 'unsafe-inline'; style-src-attr 'self'; img-src 'self'; connect-src https://maresachatbot.azurewebsites.net; manifest-src 'self'; frame-ancestors 'self' https://portalcmh.corpmaresa.com.ec",
+        "content-security-policy": "default-src 'self'; script-src 'self' https://cdn.botframework.com/botframework-webchat/latest/webchat.js; style-src 'self' 'unsafe-inline'; style-src-attr 'self'; img-src 'self'; connect-src https://maresachatbot.azurewebsites.net; manifest-src 'self'; frame-ancestors 'self' https://portalcmh.corpmaresa.com.ec https://menucmh.azurewebsites.net/",
         "Strict-Transport-Security" : "max-age=31536000; includeSubDomains",
         "X-Content-Type-Options": "nosniff"
     }
